--- a/BookingFood/BookingFood/Base.lproj/LaunchScreen.storyboard
+++ b/BookingFood/BookingFood/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,19 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="slide1" translatesAutoresizingMaskIntoConstraints="NO" id="6rK-tf-rcY">
+                                <rect key="frame" x="0.0" y="224.5" width="414" height="457.5"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6rK-tf-rcY" secondAttribute="trailing" id="Pdg-oo-9X3"/>
+                            <constraint firstItem="6rK-tf-rcY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Zxq-4U-tfq"/>
+                            <constraint firstItem="6rK-tf-rcY" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="i4v-Md-KDG"/>
+                            <constraint firstItem="6rK-tf-rcY" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="odQ-zU-Yxh"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -25,6 +36,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="slide1" width="484" height="457.5"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
