--- a/BookingFood/BookingFood/Base.lproj/LaunchScreen.storyboard
+++ b/BookingFood/BookingFood/Base.lproj/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,29 +15,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="slide1" translatesAutoresizingMaskIntoConstraints="NO" id="6rK-tf-rcY">
-                                <rect key="frame" x="0.0" y="224.5" width="414" height="457.5"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo2" translatesAutoresizingMaskIntoConstraints="NO" id="6rK-tf-rcY">
+                                <rect key="frame" x="0.0" y="174" width="414" height="558"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6rK-tf-rcY" secondAttribute="trailing" id="Pdg-oo-9X3"/>
-                            <constraint firstItem="6rK-tf-rcY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Zxq-4U-tfq"/>
-                            <constraint firstItem="6rK-tf-rcY" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="i4v-Md-KDG"/>
-                            <constraint firstItem="6rK-tf-rcY" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="odQ-zU-Yxh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6rK-tf-rcY" secondAttribute="bottom" constant="130" id="27M-Pn-KrO"/>
+                            <constraint firstItem="6rK-tf-rcY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4TA-TS-UGX"/>
+                            <constraint firstItem="6rK-tf-rcY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="130" id="7Jp-II-7Os"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6rK-tf-rcY" secondAttribute="trailing" id="UhK-o0-7mW"/>
+                            <constraint firstItem="6rK-tf-rcY" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="tUJ-zp-n71"/>
+                            <constraint firstItem="6rK-tf-rcY" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="w3W-6D-j64"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <image name="slide1" width="484" height="457.5"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="logo2" width="481" height="484"/>
     </resources>
 </document>
