--- a/BookingFood/BookingFood/Views/Home/PopularCell/PopularCell.xib
+++ b/BookingFood/BookingFood/Views/Home/PopularCell/PopularCell.xib
@@ -33,7 +33,7 @@
                                         <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bgM-hL-WyR">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bgM-hL-WyR">
                                         <rect key="frame" x="0.0" y="21.5" width="164" height="150"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="150" id="kEP-Ct-UYC"/>
